--- a/index.html
+++ b/index.html
@@ -7,56 +7,124 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #2c3e50;
             text-align: center;
         }
-        #fact-list {
-            margin-top: 20px;
+        #input-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        #title-input {
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            width: 300px;
+        }
+        #generate-btn {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        #generate-btn:hover {
+            background-color: #2980b9;
+        }
+        #facts-container {
+            background-color: white;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .fact {
-            margin: 10px 0;
-            font-size: 1.2em;
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #e8f4f8;
+            border-radius: 4px;
+        }
+        #loading {
+            text-align: center;
+            display: none;
         }
     </style>
 </head>
 <body>
-    <h1>LLM Fact Generator</h1>
-    <p>Choose a title and generate 5 fun facts!</p>
-    <input type="text" id="title" placeholder="Enter a title (e.g., Engineer)">
-    <button onclick="generateFacts()">Generate Facts</button>
-
-    <div id="fact-list"></div>
+    <h1>Fact Generator</h1>
+    <div id="input-container">
+        <input type="text" id="title-input" placeholder="Enter a title">
+        <button id="generate-btn">Generate Facts</button>
+    </div>
+    <div id="loading">Generating facts...</div>
+    <div id="facts-container"></div>
 
     <script>
-        async function generateFacts() {
-            const title = document.getElementById('title').value.trim();
+        const generateBtn = document.getElementById('generate-btn');
+        const titleInput = document.getElementById('title-input');
+        const factsContainer = document.getElementById('facts-container');
+        const loadingIndicator = document.getElementById('loading');
 
+        generateBtn.addEventListener('click', generateFacts);
+
+        async function generateFacts() {
+            const title = titleInput.value.trim();
             if (!title) {
-                alert('Please enter a title.');
+                alert('Please enter a title');
                 return;
             }
 
-            // Simulating LLM response
-            const response = await fetch('https://api.example.com/generate-facts', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ title })
-            });
+            loadingIndicator.style.display = 'block';
+            factsContainer.innerHTML = '';
 
-            const data = await response.json();
-            const facts = data.facts;
+            try {
+                const response = await fetch('https://api.openai.com/v1/chat/completions', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': 'Bearer YOUR_OPENAI_API_KEY' // Replace with your actual API key
+                    },
+                    body: JSON.stringify({
+                        model: "gpt-3.5-turbo",
+                        messages: [{
+                            role: "system",
+                            content: "You are a helpful assistant that generates interesting facts."
+                        }, {
+                            role: "user",
+                            content: `Generate 5 interesting facts about "${title}". Provide each fact as a separate sentence.`
+                        }],
+                        max_tokens: 150
+                    })
+                });
 
-            const factList = document.getElementById('fact-list');
-            factList.innerHTML = '';
+                const data = await response.json();
+                const facts = data.choices[0].message.content.split('. ');
 
-            facts.forEach(fact => {
-                const factDiv = document.createElement('div');
-                factDiv.className = 'fact';
-                factDiv.textContent = fact;
-                factList.appendChild(factDiv);
-            });
+                facts.forEach(fact => {
+                    if (fact.trim()) {
+                        const factElement = document.createElement('div');
+                        factElement.classList.add('fact');
+                        factElement.textContent = fact.trim() + '.';
+                        factsContainer.appendChild(factElement);
+                    }
+                });
+            } catch (error) {
+                console.error('Error:', error);
+                factsContainer.innerHTML = '<p>An error occurred while generating facts. Please try again.</p>';
+            } finally {
+                loadingIndicator.style.display = 'none';
+            }
         }
     </script>
 </body>
